Work on portal structures

--- a/docs/changelog/3.1.0.md
+++ b/docs/changelog/3.1.0.md
@@ -1,5 +1,8 @@
 Added:
-* Glass Manipulator machine.
+* Glass Manipulator machine. **NYI**
+* Looking Glass support. **NYI**
+* Thermal Expansion recipes. **NYI**
+* Config option to change the player portal cooldown rate.
 
 <hr>
 
