--- a/docs/changelog/3.0.11.md
+++ b/docs/changelog/3.0.11.md
@@ -12,4 +12,6 @@ Fixed:
 * [[#183](/../../issues/183)] Module Manipulator incorrectly syncing data to client.
 * Tiny buttons on Dimensional Bridge Stabilizer GUI.
 * Graphical issues on guide book.
+* Memory leak on guide book item information pages.
 * Direct redstone issues. Redstone torches can now be placed directly onto the Redstone Interface and redstone wire now works directly.
+* Chat messages will now always correctly display [Success] or [Error].
