Changed Featherfall to a potion effect
Lasts 10 sec on teleport. Should clear up misunderstandings with how the
old version worked.

--- a/src/main/resources/assets/enhancedportals/lang/en_US.lang
+++ b/src/main/resources/assets/enhancedportals/lang/en_US.lang
@@ -62,6 +62,9 @@ enhancedportals.gui.facing.1=East
 enhancedportals.gui.facing.2=South
 enhancedportals.gui.facing.3=West
 
+# Potions
+potion.featherfall=Featherfall
+
 # Creative Tab
 itemGroup.enhancedportals=EnhancedPortals 3
 
