--- a/docs/changelog/3.0.11.md
+++ b/docs/changelog/3.0.11.md
@@ -6,6 +6,11 @@ Added:
 
 <hr>
 
+Changed:
+* Featherfall now works as a Potion Effect that lasts for 10 seconds after you hit the portal that contains the module.
+
+<hr>
+
 Fixed:
 
 * [[#174](/../../issues/174)] Update check every time a player joins a server for both the client and server.
