--- a/docs/changelog/3.0.12.md
+++ b/docs/changelog/3.0.12.md
@@ -1,5 +1,5 @@
 Added:
-
+* Diamond nugget for use with TE recipes.
 
 <hr>
 
@@ -7,3 +7,8 @@ Fixed:
 * Thermal Expansion recipes.
 * Missing recipe for Fluid Module Upgrade.
 * Ender-Infused metal recipe.
+
+<hr>
+
+Removed:
+* Reverted transparent frame blocks.
